<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faves"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites"/>
    </group>

    <item
        android:id="@+id/nav_newsReceive"
        app:actionViewClass="androidx.appcompat.widget.AppCompatCheckBox"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/receive_notification"/>

    <group
        android:id="@+id/supportMenuGroup"
        android:checkableBehavior="none">

        <item
            android:id="@+id/inviteFriends"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/invite_friends"/>

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rating"/>

    </group>

    <group
        android:id="@+id/aboutMenuGroup"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_recentUpdates"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/recent_updates"/>

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_contactUS"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/contact_us"/>

    </group>

    <group
        android:id="@+id/question_freq"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/question"/>

    </group>

</menu>