<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/bottom_special"
            android:icon="@drawable/special_icon"
            android:title="@string/offers" />
        <item
            android:id="@+id/bottom_notification"
            android:icon="@drawable/notification_icon"
            android:title="@string/notification"/>
        <item
            android:id="@+id/bottom_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>
        <item
            android:id="@+id/bottom_category"
            android:icon="@drawable/category_icon"
            android:title="@string/categories"/>
        <item
            android:id="@+id/bottom_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile"/>

    </group>

</menu>