<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/close_popup_contact"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/mainToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text6"
                android:text="@string/contact_us"
                android:fontFamily="@font/vazir_bold"
                android:textSize="16sp"/>

            <com.airbnb.lottie.LottieAnimationView
                android:contentDescription="@string/app_name"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="contact.json"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/text6"
                android:text="@string/contact_us_text"
                android:fontFamily="@font/vazir"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/call"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:text="@string/call"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:elevation="3dp"
                android:fontFamily="@font/vazir_bold"/>

            <Button
                android:id="@+id/mail"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:text="@string/mail"
                android:textSize="16sp"
                android:textColor="@color/text1"
                android:elevation="3dp"
                android:fontFamily="@font/vazir_bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>