<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="0dp">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_timelapse_24"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/mainToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text6"
                android:text="@string/time_activity"
                android:fontFamily="@font/vazir_bold"
                android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/text6"
                    android:text="@string/activity_text"
                    android:fontFamily="@font/vazir"
                    android:textSize="14sp"/>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/close_popup_activity"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/rate_zero_shape"
                android:fontFamily="@font/vazir_bold"
                android:text="@string/close"
                android:textColor="@color/text1"
                android:textSize="14sp"
                android:elevation="2dp"
                android:layout_gravity="center"
                app:spinning_bar_padding="10dp"
                app:spinning_bar_color="@color/text1"
                app:spinning_bar_width="3dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>