<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.arapp.arappofficial.Activities.ForgetPassword"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/forgetPasswordToolbar"
        android:layoutDirection="rtl"
        android:theme="@style/Theme.MyFancyTheme"
        android:background="@drawable/toolbar_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="70dp"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text1"
                android:text="@string/forgetten_password_toolbar"
                android:textSize="20sp"
                android:fontFamily="@font/vazir_medium"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/forgetPasswordPhoneLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetten_password_text"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/vazir_bold"
            android:textColor="@color/colorAccentDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetPassInputPhoneNo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone_number"
            android:layoutDirection="rtl"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/shade6"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:elevation="2dp"
            app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/vazir"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:maxLength="11"
                android:textSize="16sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonForgetPassPhoneNum"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/vazir_bold"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/text1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:elevation="2dp"
            android:onClick="submitPhoneNumber"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgetPassValidateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/vazir_bold"
            android:textColor="@color/colorAccentDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validation_code_text"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/vazir_light"
            android:textColor="@color/colorAccentDark"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layoutDirection="rtl">

            <TextView
                android:id="@+id/countDownTimerRegisterForgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textSize="20sp"
                android:fontFamily="@font/vazir_bold"
                android:textColor="@color/colorAccentDark"/>

            <TextView
                android:id="@+id/resendVerifyCodeTextForgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/send_verify_code"
                android:textSize="16sp"
                android:enabled="false"
                android:fontFamily="@font/vazir_medium"
                android:textColor="@color/disable"
                android:onClick="sendVerifyCode"/>

        </LinearLayout>

        <com.chaos.view.PinView
            android:id="@+id/validationCodeForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:cursorVisible="true"
            style="@style/ValidationCode"
            app:lineColor="@color/shade6"
            android:inputType="number"
            app:hideLineWhenFilled="false"
            android:textColor="@color/black"
            android:itemBackground="@color/colorAccent"
            android:hint="@string/code_hint"
            app:cursorColor="@color/colorAccentDark"
            android:fontFamily="@font/vazir"
            app:itemCount="6"
            app:viewType="line"/>

        <Button
            android:id="@+id/buttonValidateForgetPass"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/vazir_bold"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/text1"
            android:elevation="2dp"
            android:textSize="20sp"
            android:onClick="verifyCode"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_phone_number"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="@font/vazir_medium"
            android:textColor="@color/shade5"
            android:onClick="editPhoneNumber"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_change"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/vazir_bold"
            android:textColor="@color/colorAccentDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordForgetPass"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/login_pass"
            android:layoutDirection="rtl"
            android:elevation="2dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/shade6"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@style/error_appearance">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:ems="10"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordForgetPass"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/confirm_pass"
            android:layoutDirection="rtl"
            android:elevation="2dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/shade6"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@style/error_appearance">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vazir"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:ems="10"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonChangePass"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/vazir_bold"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/text1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:elevation="2dp"
            app:spinning_bar_padding="10dp"
            app:spinning_bar_color="@color/text1"
            app:spinning_bar_width="3dp"
            android:onClick="submitNewPass"/>

    </LinearLayout>

</LinearLayout>